Fix alignment/sizing of vote border effect
Improved viewing on zoomed screens

--- a/static/style5/_song.scss
+++ b/static/style5/_song.scss
@@ -9,7 +9,12 @@ div.song {
 	        transition: $song_transitions, border-color $transtime, background-color $transtime;
 	height: $art_size;
 	width: 100%;
-	border: solid 1px transparent;
+	border-left-style: solid;
+	border-left-color: transparent;
+	border-left-width: 1px;
+	border-right-style: solid;
+	border-right-color: transparent;
+	border-right-width: 1px;
 
 	// used when mobile ratings are active
 	&.on_top {
@@ -179,11 +184,11 @@ div.song {
 	$highlight_fade_duration: 2s;
 
 	div.song_highlight {
+		box-sizing: content-box;
 		position: absolute;
 		height: 1px;
 		width: 100%;
 		background: $vote_highlight;
-		left: 0;
 		-webkit-transition: 450ms transform $transfunc, $highlight_fade_duration background linear;
 		        transition: 450ms transform $transfunc, $highlight_fade_duration background linear;
 		@include transform(scaleX(0));
@@ -191,21 +196,27 @@ div.song {
 
 	div.song_highlight_topleft {
 		top: -1px;
+		left: -1px;
 		@include transform-origin(top left);
 	}
 
 	div.song_highlight_topright {
 		top: -1px;
+		left: -4px;
+		padding-right: 6px;
 		@include transform-origin(top right);
 	}
 
 	div.song_highlight_bottomleft {
 		top: 100%;
+		left: -1px;
 		@include transform-origin(bottom left);
 	}
 
 	div.song_highlight_bottomright {
 		top: 100%;
+		left: -4px;
+		padding-right: 6px;
 		@include transform-origin(bottom right);
 	}
 
@@ -277,7 +288,7 @@ div.song {
 			}
 
 			div.song_highlight {
-				background: $vote_registered;
+				background: transparent;
 				@include transform(scaleX(0.50));
 			}
 
