--- a/static/style5/_timeline_sizing.scss
+++ b/static/style5/_timeline_sizing.scss
@@ -47,8 +47,6 @@ body.simple.normal div.timeline {
 
 div.timeline {
 	div.song {
-		height: $art_size + 2;
-
 		div.art_anchor {
 			width: $art_size;
 			height: $art_size;
